[project]
name = "task-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdul-Rafeh Alvi",email = "abdulr15352@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.118.0,<0.119.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
